Fix missing color and font boldness

--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -2,3 +2,4 @@
 .color-blue { color: $blue; }
 .color-pink { color: $pink; }
 .color-orange { color: $orange; }
+.color-purple { color: $purple; }
